--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,11 +1,15 @@
 body {
-  height: 100vh;
+  height: 98vh;
   width: 100vw;
   display: flex;
-  justify-content: center;
+  position: absolute;
   background-color: whitesmoke;
   font-family: sans-serif;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
   text-align: center;
+  justify-content: center;
 }
 
 #login-box {
@@ -21,7 +25,7 @@ body {
   margin: 16% 0% 0% 0%;
   border-radius: 50%;
   border: solid 0.5px white;
-} 
+}
 
 h2 {
   margin: 14% 0% 0% 0%;
@@ -33,7 +37,7 @@ h2 {
   border: none;
   padding: 1rem 2rem;
   background: #1da1f2;
-  color: #ffffff;
+  color: white;
   font-size: 1rem;
   line-height: 1;
   cursor: pointer;
@@ -41,4 +45,7 @@ h2 {
   width: 60%;
   text-align: center;
   border-radius: 2px;
+  outline: none;
 }
+
+/*# sourceMappingURL=login.css.map */
