--- a/public/css/tweet.css
+++ b/public/css/tweet.css
@@ -54,16 +54,19 @@
   width: 30px;
   margin: 0% 0% 0% 85%;
 }
+
 #tweet-button > button {
   height: 3vw;
   width: 7vw;
   font-size: 1.5vw;
+  background-color: #4a61c8;
   cursor: pointer;
   border-radius: 50px;
   color: white;
   border: none;
   outline: none;
 }
+
 .tweet {
   height: fit-content;
   width: 100%;
