--- a/views/mixins/rightSide.pug
+++ b/views/mixins/rightSide.pug
@@ -1,5 +1,5 @@
 mixin rightSide
-  #right-side-bar
+  .side-bar
     .sideBarElements
       input(id="search-box" type="text" placeholder="search" onkeyup="search()")
     #suggestion-box
