--- a/sass/sideBar.sass
+++ b/sass/sideBar.sass
@@ -75,7 +75,7 @@ body
     margin-left: 1vw
     border-radius: 50%
   textarea
-    @include textareaLayout (1vw, 2vw)
+    @include textareaLayout (1vw, 2vw, 28vw)
   height: 60%
   display: flex
   width: 100%
@@ -144,7 +144,7 @@ select:focus
   padding: 5%
 
 #response-text-area textarea
-  @include textareaLayout (1vw, 2vw)
+  @include textareaLayout (1vw, 2vw, 28vw)
   border-bottom: solid lightgray
 
 #response-button button
