--- a/sass/sideBar.sass
+++ b/sass/sideBar.sass
@@ -8,6 +8,7 @@ body
   width: 25%
   background-color: white
   border-right: solid 0.5px lightgray
+  border-left: solid 0.5px lightgray
 
 #logo
   height: 10%
@@ -109,12 +110,6 @@ select:focus
 
 .change-svg-colour 
   fill: $themeColour
-
-#tweet-box 
-  display: flex
-  width: 96%
-  padding: 2%
-  height: 63%
 
 .char-count 
   height: 46px
