--- a/views/home.pug
+++ b/views/home.pug
@@ -2,6 +2,7 @@ head
   script(src="/js/home.js")
   script(src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"
       type="text/javascript")
+  link(rel="stylesheet", href="/css/home.css")
   include commonPart.pug
   include mixins/rightSide.pug
 
