--- a/sass/tweet.sass
+++ b/sass/tweet.sass
@@ -118,10 +118,12 @@
   color: gray
   cursor: pointer
 
-.delete-tweet i 
-  cursor: pointer
-  font-size: 20px
-
+.delete-tweet
+  i 
+    cursor: pointer
+    font-size: 20px
+  padding-right: 1% 
+  
 .red 
   @include svgHighlighter($likeColour)
 
