|#22|trinangkur/rahit| Created common function for creating tweet retweet and reply html

--- a/sass/tweet.sass
+++ b/sass/tweet.sass
@@ -44,7 +44,8 @@
 
 .dp 
   img 
-    @include pictureLayout(52%)
+    width: 74%
+    border-radius: 50%
     margin-top: 1vw
     margin-left: 1vw
   width: 10%
